Worked out the problem

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script scr="index.js"></script>
+    <script src="index.js"></script>
+    <!-- <script src="britt-lecture-notes.js"></script> -->
+    <h1>Callbacks, Higher Order Functions</h1>
 </body>
 </html>
